# ctplanet

./: .buildinfo  .gitattributes  .gitignore  Core-Moon.py  Earth_test.py  Hydrostatic.py  HydrostaticShapeLith.py  InertiaTensor.py  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  Mars_crust_thick_test.py  Mars_test.py  README.md  ReadRefModel.py  ceres.py  codemeta.json  examples.html  genindex.html  index.html  installation.html  mars_fcn.py  mars_figs.py  mars_j2.py  objects.inv  pyCrust-Moon.py  pyCrust_Mars.py  pyCrust_Mars_InSight.py  pyCrust_Mars_InSight_dichotomy.py  pyCrust_Moon.py  pyMoho.py  pyproject.toml  references.html  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
.github/: pull_request_template.md
.github/workflows/: pypi_publish.yml  web_documentation.yml
Data/Mars-reference-interior-models/: model_DWTh2Ref1  model_DWTh2Ref2  model_dwcold  model_dwhot_modif  model_dwhot_stairs  model_eh70hot
Data/Mars-reference-interior-models/Smrekar/: DWThot.deck  DWThotCrust1r.deck  EH45Tcold.deck  EH45ThotCrust2.deck  EH45ThotCrust2r.deck  LFAK.deck  ZG_DW.deck
_sources/: examples.rst  examples.rst.txt  index.md  index.rst  index.rst.txt  installation.rst  installation.rst.txt  references.md  references.rst
_sources/source/: api.rst
ctplanet/: Hydrostatic.py  InertiaTensor.py  Moho.py  ReadRefModel.py  __init__.py  _version.py
docs/: conf.py  examples.md  examples.rst  index.rst  installation.md  installation.rst  routines.rst
docs/_build/html/: .buildinfo  examples.html  genindex.html  index.html  installation.html  objects.inv  references.html  search.html  searchindex.js
docs/_build/html/_sources/: examples.rst.txt  references.rst.txt
docs/_static/: custom.css
docs/source/: hydrostatic.rst  inertiatensor.rst  modules.rst  pycrust.rst  pymoho.rst  readrefmodel.rst
examples/: Ceres-shape.py  Core-Moon.py  Earth-shape.py  Earth_test.py  Mars-Crust-InSight-dichotomy.py  Mars-Crust-InSight.py  Mars-Crust-hydrostatic-tests.py  Mars-Crust.py  Mars-fcn.py  Mars-j2.py  Mars-shape.py  Mars_crust_thick_test.py  Mercury-Crust.py  Moon-Core.py  Moon-Crust.py  Venus-Crust-ave.py  Venus-Crust.py  ceres.py  mars_fcn.py  mars_figs.py  mars_j2.py  pyCrust_Mars.py  pyCrust_Mars_InSight.py  pyCrust_Mars_InSight_dichotomy.py  pyCrust_Moon.py
examples/Data/: dichotomy_359.sh  jgmro_120d_sha.tab
examples/Data/Mars-reference-interior-models/: Khan2022.deck  model_Gudkova  model_eh70cold
pycrust/: Hydrostatic.py  InertiaTensor.py  ReadRefModel.py  __init__.py  _version.py  pyMoho.py
source/: api.html
(+11 files in other folders)
