[project]
name = 'ctplanet'
dynamic = ['version']
description = 'Create a crustal thickness map of a planet'
readme = 'README.md'
license = { text = 'BSD-3-Clause' }
requires-python = '>=3.8'
keywords = ['crust', 'gravity', 'geophysics']
classifiers = [
'Development Status :: 3 - Alpha',
     'Environment :: Console',
     'Intended Audience :: Science/Research',
     'Intended Audience :: Developers',
     'License :: OSI Approved :: BSD License',
     'Natural Language :: English',
     'Operating System :: OS Independent',
     'Programming Language :: Python',
     'Programming Language :: Python :: 3',
     'Topic :: Scientific/Engineering :: Physics',
     'Topic :: Scientific/Engineering',
]
authors = [
  { name = 'Mark Wieczorek', email = 'mark.wieczorek@ipgp.fr' },
]
dependencies = ['pyshtools>=4.13.1']

[project.urls]
homepage = 'https://github.com/MarkWieczorek/ctplanet'
download = 'https://github.com/MarkWieczorek/ctplanet/zipball/master'

[build-system]
requires = ['setuptools', 'wheel', 'setuptools_scm[toml]']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "ctplanet/_version.py"
version_scheme =  "post-release"
local_scheme =  "no-local-version"
